# dev-tools

./: .gitignore  CHANGELOG.md  README.md  dev-tools.ps1  devenv.ps1  newenv.ps1
.github/: pull-request-template.md
.github/ISSUE_TEMPLATE/: feature-ticket.md
dot-files/: .gitignore  .template_dtconfig
env_templates/daily_note/: {{ TIME STAMP }} - Daily Notes.md
env_templates/kit_note/: {{ SHORT DATE }}.md  {{ YEAR }}-{{ MONTH }}-{{ DAY }}.md
env_templates/meeting_note/: {{ TIME STAMP }}.md
env_templates/newenv/: .gitignore  CHANGELOG.md  README.md
env_templates/newenv/src/: __main__.py
env_templates/newenv/{{ ENV_NAME }}/: __main__.py
env_templates/prompt/: Profile.ps1
package/: pyproject.toml
package/dev_tools/: actions.py  meeting.py  newenv.py  title-notes.py  title.py
profile/: Profile.ps1  aliases.ps1  functions.ps1  prompt.ps1
scripts/: actions.ps1  aliases.ps1  cleanenvs.ps1  delenv.ps1  dev-tools.ps1  functions.ps1  meeting.ps1  newenv.ps1  title-notes.ps1
templates/kit_note/: {{ SHORT DATE }}.md  {{ TIME STAMP }} - Keeping in Touch.md
templates/newenv/: .gitignore  CHANGELOG.md  README.md
